--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	{# tittle tag that will be shown in tab#}
-	<title> Api Arena </title>
+	<title> Api Arena | Distribution of Games </title>
 </head>
 <body>
 	{% include "navbar.html" %}{# with this, we can manipulate navbar in each site with just navbar.html#}
