--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,6 +1,538 @@
-{% extends 'base.html' %}
+<!doctype html>
+<html class="no-js" lang="en">
 
-{% block content %}
-	<h1>hello wrold</h1>
-	<p>this is a template</p>
-{% endblock %}
+{% block scripts %} 
+{% load static %}
+<!-- Mirrored from ultiglobal.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 10 Jan 2022 01:35:09 GMT -->
+<head>
+	<!-- I added `load static` so I am able to load js and css scripts. More about: https://www.techiediaries.com/javascript-tutorial/ -->
+
+
+        <!-- META DATA -->
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+		<meta name="description" content="Distributor of gaming products. We offer pc games and cards with digital delivery.">
+
+        <!--font-family-->
+<link href="https://fonts.googleapis.com/css?family=Exo:400,700" rel="stylesheet">
+
+		<!-- <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
+
+		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+
+		<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+-->
+        <!-- TITLE OF SITE -->
+        <title>Api Arena | Distribution of Games</title>
+		
+        <!-- for title img -->
+		<link rel="shortcut icon" type="image/icon" href="static/assets/images/logo/favicon.png"/>
+
+        <!--font-awesome.min.css-->
+        <link rel="stylesheet" href="static/assets/css/font-awesome.min.html">
+
+    <!--Changed link from `../` to `https://` Paweł 19.07.2022-->
+		<!--linear icon css-->
+		<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+
+		<!--animate.css-->
+        <link rel="stylesheet" href="static/assets/css/animate.css">
+
+		<!--hover.css-->
+        <link rel="stylesheet" href="static/assets/css/hover-min.css">
+
+		<!--vedio player css-->
+        <link rel="stylesheet" href="static/assets/css/magnific-popup.css">
+
+		<!--owl.carousel.css-->
+        <link rel="stylesheet" href="static/assets/css/owl.carousel.min.css">
+		<link href="static/assets/css/owl.theme.default.min.css" rel="stylesheet"/>
+
+
+        <!--bootstrap.min.css-->
+        <link rel="stylesheet" href="static/assets/css/bootstrap.min.css">
+
+		<!-- bootsnav -->
+		<link href="static/assets/css/bootsnav.css" rel="stylesheet"/>
+
+        <!--style.css-->
+        <link rel="stylesheet" href="static/assets/css/style.css">
+
+        <!--responsive.css-->
+        <link rel="stylesheet" href="static/assets/css/responsive.css">
+
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+
+        <!--[if lt IE 9]>
+			<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+
+    </head>
+
+	<body>
+		<!--[if lte IE 9]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+        <![endif]-->
+
+
+
+
+		<!--header start-->
+		<section id="home"  class="header">
+			<div class="container">
+				<div class="header-left">
+					<p class="para-news">E-mail: business@apiarena.com
+					</p><!--/</p>-->
+				</div><!--/.header-left -->
+
+			</div><!--/.container -->
+
+		</section><!--/.header-->
+		<!--header end-->
+
+		<!--menu start-->
+		<section id="menu">
+			<div class="container">
+				<div class="menubar">
+					<nav class="navbar navbar-default">
+
+						<!-- Brand and toggle get grouped for better mobile display -->
+						<div class="navbar-header">
+							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+							<a class="navbar-brand" href="index.html">
+								<img src="static/assets/images/logo/logo.png" alt="Ultiglobal">
+							</a>
+						</div><!--/.navbar-header -->
+
+						<!-- Collect the nav links, forms, and other content for toggling -->
+						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+							<ul class="nav navbar-nav navbar-right">
+								<li class="smooth-menu"><a href="#home">Home</a></li>
+								<li class="smooth-menu"><a href="#about">About us</a></li>
+								<li class="smooth-menu"><a href="#offer">Offer</a></li>
+								<li class="smooth-menu"><a href="#values">Values</a></li>
+								<li class="smooth-menu"><a href="#contact">Contact</a></li>
+
+							</ul><!-- / ul -->
+						</div><!-- /.navbar-collapse -->
+					</nav><!--/nav -->
+				</div><!--/.menubar -->
+			</div><!-- /.container -->
+
+		</section><!--/#menu-->
+		<!--menu end-->
+
+		<!-- header-slider-area start -->
+		<section class="header-slider-area">
+			<div id="carousel-example-generic" class="carousel slide carousel-fade" data-ride="carousel">
+
+			  <!-- Indicators -->
+				<ol class="carousel-indicators">
+					<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+					<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				</ol>
+
+				<!-- Wrapper for slides -->
+				<div class="carousel-inner" role="listbox">
+					<div class="item active">
+						<div class="single-slide-item slide-1">
+							<div class="container">
+								<div class="row">
+									<div class="col-sm-12">
+										<div class="single-slide-item-content">
+                      <h2>
+												Welcome at Api Arena <br>
+                        Distributor of gaming products
+											</h2>
+
+
+											</div><!-- /.single-slide-item-content-->
+									</div><!-- /.col-->
+								</div><!-- /.row-->
+							</div><!-- /.container-->
+						</div><!-- /.single-slide-item-->
+					</div><!-- /.item .active-->
+					<div class="item">
+						<div class="single-slide-item slide-2">
+							<div class="container">
+								<div class="row">
+									<div class="col-sm-12">
+										<div class="single-slide-item-content">
+                      <h2>
+                        Welcome at Api Arena <br>
+                        Distributor of gaming products
+                      </h2>
+
+										</div><!-- /.single-slide-item-content-->
+
+									</div><!-- /.col-->
+								</div><!-- /.row-->
+							</div><!-- /.container-->
+						</div><!-- /.single-slide-item-->
+					</div><!-- /.item .active-->
+				</div><!-- /.carousel-inner-->
+
+				<!-- Controls -->
+
+			</div><!-- /.carousel-->
+
+		</section><!-- /.header-slider-area-->
+		<!-- header-slider-area end -->
+
+
+
+		<!--about-us start -->
+		<section id="about" class="about-us">
+			<div class="container">
+				<div class="about-us-content">
+					<div class="row">
+						<div class="col-sm-6">
+							<div class="single-about-us">
+								<div class="about-us-txt">
+									<h2>About us</h2>
+									<p>
+										We are innovative international distributor with years of experience in the video games industry. We have connections to dozens of reliable suppliers, ensuring timely delivery at a competitive price. We welcome new business partners to start a cooperation with us.
+									</p>
+
+								</div><!--/.about-us-txt-->
+							</div><!--/.single-about-us-->
+						</div><!--/.col-->
+
+					</div><!--/.row-->
+				</div><!--/.about-us-content-->
+			</div><!--/.container-->
+
+		</section><!--/.about-us-->
+		<!--about-us end -->
+
+
+    <!--we-do start -->
+    <section id="offer" class="we-do">
+      <div class="container">
+        <div class="we-do-details">
+          <div class="section-header text-center">
+            <h2>We offer variety of gaming products</h2>
+            </div><!--/.section-header-->
+          <div class="we-do-carousel">
+
+              <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="single-we-do-box text-center">
+                  <div class="we-do-description">
+                    <div class="we-do-info">
+                      <div class="we-do-img">
+                        <img src="static/assets/images/icons/Ultiglobal_PCGames.png" alt="image of consultency" />
+                      </div><!--/.we-do-img-->
+
+                    </div><!--/.we-do-info-->
+                    <div class="we-do-comment">
+                      <p>
+                        PC Games for Steam, Uplay, Origin and other platforms
+                      </p>
+                    </div><!--/.we-do-comment-->
+                  </div><!--/.we-do-description-->
+                </div><!--/.single-we-do-box-->
+              </div><!--/.col-->
+
+              <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="single-we-do-box text-center">
+                  <div class="we-do-description">
+                    <div class="we-do-info">
+                      <div class="we-do-img">
+                        <img src="static/assets/images/icons/Ultiglobal_PSNetworkXBoxLive.png" alt="image of business" />
+                      </div><!--/.we-do-img-->
+
+                    </div><!--/.we-do-info-->
+                    <div class="we-do-comment">
+                      <p>
+                        Digital Distribution: Playstation Network, Xbox Live
+                      </p>
+                    </div><!--/.we-do-comment-->
+                  </div><!--/.we-do-description-->
+                </div><!--/.single-we-do-box-->
+              </div><!--/.col-->
+
+              <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="single-we-do-box text-center">
+                  <div class="we-do-description">
+                    <div class="we-do-info">
+                      <div class="we-do-img">
+                        <img src="static/assets/images/icons/Ultiglobal_ConsoleGames.png" alt="image of Ultiglobal_ConsoleGames" />
+                      </div><!--/.we-do-img-->
+
+                    </div><!--/.we-do-info-->
+                    <div class="we-do-comment">
+                      <p>
+                        Console Games
+                      </p>
+                    </div><!--/.we-do-comment-->
+                  </div><!--/.we-do-description-->
+                </div><!--/.single-we-do-box-->
+              </div><!--/.col-->
+
+              <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="single-we-do-box text-center">
+                  <div class="we-do-description">
+                    <div class="we-do-info">
+                      <div class="we-do-img">
+                        <img src="static/assets/images/icons/Ultiglobal_Consoles.png" alt="image of consultency" />
+                      </div><!--/.we-do-img-->
+
+                    </div><!--/.we-do-info-->
+                    <div class="we-do-comment">
+                      <p>
+                        Consoles
+                      </p>
+                    </div><!--/.we-do-comment-->
+                  </div><!--/.we-do-description-->
+                </div><!--/.single-we-do-box-->
+              </div><!--/.col-->
+
+              <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="single-we-do-box text-center">
+                  <div class="we-do-description">
+                    <div class="we-do-info">
+                      <div class="we-do-img">
+                        <img src="static/assets/images/icons/Ultiglobal_AccessCards.png" alt="image of support" />
+                      </div><!--/.we-do-img-->
+
+                    </div><!--/.we-do-info-->
+                    <div class="we-do-comment">
+                      <p>
+                        Steam, iTunes, EA Access and other cards
+                      </p>
+                    </div><!--/.we-do-comment-->
+                  </div><!--/.we-do-description-->
+                </div><!--/.single-we-do-box-->
+              </div><!--/.col-->
+
+
+
+              <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="single-we-do-box text-center">
+                  <div class="we-do-description">
+                    <div class="we-do-info">
+                      <div class="we-do-img">
+                        <img src="static/assets/images/icons/Ultiglobal_Accessories.png" alt="image of business" />
+                      </div><!--/.we-do-img-->
+
+                    </div><!--/.we-do-info-->
+                    <div class="we-do-comment">
+                      <p>
+                        Accessories
+                      </p>
+                    </div><!--/.we-do-comment-->
+                  </div><!--/.we-do-description-->
+                </div><!--/.single-we-do-box-->
+              </div><!--/.col-->
+
+
+
+
+
+
+          </div><!--/.we-do-carousel-->
+        </div><!--/.we-do-details-->
+      </div><!--/.container-->
+
+    </section><!--/.we-do-->
+    <!--we-do end-->
+
+
+		<!--service start-->
+		<section id="values"  class="service">
+				<div class="container">
+					<div class="service-details">
+						<div class="section-header text-center">
+							<h2>More about us</h2>
+													</div><!--/.section-header-->
+						<div class="service-content-one">
+							<div class="row">
+								<div class="col-sm-4 col-xs-12">
+									<div class="service-single text-center">
+										<div class="service-img">
+											<img src="static/assets/images/icons/AWARD_ICON.png" alt="image of service" />
+										</div><!--/.service-img-->
+										<div class="service-txt">
+
+											<p>
+												We value your time and we make sure you can count on us.
+											</p>
+
+										</div><!--/.service-txt-->
+									</div><!--/.service-single-->
+								</div><!--/.col-->
+								<div class="col-sm-4 col-xs-12">
+									<div class="service-single text-center">
+										<div class="service-img">
+											<img src="static/assets/images/icons/GLOBAL_ICON.png" alt="image of service" />
+										</div><!--/.service-img-->
+										<div class="service-txt">
+
+											<p>
+												We operate globally and we are ready to offer you wide range of products or sell your goods to hundreds of customers worldwide.
+											</p>
+
+										</div><!--/.service-txt-->
+									</div><!--/.service-single-->
+								</div><!--/.col-->
+								<div class="col-sm-4 col-xs-12">
+									<div class="service-single text-center">
+										<div class="service-img">
+											<img src="static/assets/images/icons/RELATIONSHIPS_ICON.png" alt="image of service" />
+										</div><!--/.service-img-->
+										<div class="service-txt">
+
+											<p>
+												We aim at sustaining long lasting relationships and we mean it!
+											</p>
+
+										</div><!--/.service-txt-->
+									</div><!--/.service-single-->
+								</div><!--/.col-->
+							</div><!--/.row-->
+						</div><!--/.service-content-one-->
+
+					</div><!--/.service-details-->
+				</div><!--/.container-->
+
+		</section><!--/.service-->
+		<!--service end-->
+
+
+
+		<!--hm-footer start-->
+		<section id="contact" class="hm-footer">
+			<div class="container">
+				<div class="hm-footer-details">
+					<div class="row">
+            <div class="section-header text-center">
+<h2 class="header-margin-bottom">Contact</h2>
+						<div class="col-sm-4 col-xs-12">
+							<div class="hm-footer-widget">
+								<div class="hm-foot-title">
+									<h4>Company Info</h4>
+								</div><!--/.hm-foot-title-->
+                <div class="hm-foot-para">
+									<p class="para-news">
+										Api Arena Sp. z o. o. <br>
+										Krótka 30/1<br>55-080 Górzyce, Poland<br>
+										Court Registration no. 0000569313<br>
+										VAT EU: PL8961544283<br>
+									</p>
+								</div><!--/.hm-foot-para-->
+							</div><!--/.hm-footer-widget-->
+						</div><!--/.col-->
+						<div class="col-sm-4 col-xs-12">
+							<div class="hm-footer-widget">
+								<div class="hm-foot-title">
+									<h4>Note</h4>
+								</div><!--/.hm-foot-title-->
+                <div class="hm-foot-para">
+                  <p class="para-news">
+                    All logos, trademarks and registered trademarks
+are the property of their respective owners.
+                  </p>
+                </div><!--/.hm-foot-para-->
+
+							</div><!--/.hm-footer-widget-->
+						</div><!--/.col-->
+						<div class="col-sm-4 col-xs-12">
+							<div class="hm-footer-widget">
+								<div class="hm-foot-title">
+									<h4>Contact</h4>
+								</div><!--/.hm-foot-title-->
+								<div class="hm-foot-para">
+									<p class="para-news">
+E-mail: business@Api Arena.com <br>
+Skype: Ultiglobal1 <br>
+									</p>
+								</div><!--/.hm-foot-para-->
+
+							</div><!--/.hm-footer-widget-->
+						</div><!--/.col-->
+					</div><!--/.row-->
+				</div><!--/.hm-footer-details-->
+			</div><!--/.container-->
+
+		</section><!--/.hm-footer-details-->
+		<!--hm-footer end-->
+
+		<!-- footer-copyright start -->
+		<footer class="footer-copyright">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12">
+						<div class="foot-copyright pull-center">
+							<p>
+								&copy; Copyright 2018 Api Arena Sp. z o. o. | All rights reserved
+
+							</p>
+						</div><!--/.foot-copyright-->
+</div>
+				</div><!--/.row-->
+
+			</div><!-- /.container-->
+
+		</footer><!-- /.footer-copyright-->
+		<!-- footer-copyright end -->
+
+
+
+		<!-- jaquery link -->
+
+		<script src="static/assets/js/jquery.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+
+        <!--Changed link from `../` to `https://` Paweł 19.07.2022-->
+        <!--modernizr.min.js-->
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+
+
+		<!--bootstrap.min.js-->
+        <script type="text/javascript" src="static/assets/js/bootstrap.min.js"></script>
+
+		<!-- bootsnav js -->
+		<script src="static/assets/js/bootsnav.js"></script>
+
+		<!-- for manu -->
+		<script src="static/assets/js/jquery.hc-sticky.min.js" type="text/javascript"></script>
+
+
+		<!-- vedio player js -->
+		<script src="static/assets/js/jquery.magnific-popup.min.js"></script>
+
+		<!-- changed link from `../` to `https://` Paweł 19.07 -->
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+
+		<!-- isotope js -->
+		<!-- <script src="static/assets/js/masonry.min.js"></script>
+		<script src="static/assets/js/isotop-custom.js"></script> -->
+
+        <!--owl.carousel.js-->
+        <script type="text/javascript" src="static/assets/js/owl.carousel.min.js"></script>
+
+		<!-- counter js -->
+		<script src="static/assets/js/jquery.counterup.min.js"></script>
+		<script src="static/assets/js/waypoints.min.js"></script>
+
+        <!--Custom JS-->
+        <script type="text/javascript" src="static/assets/js/jak-menusearch.js"></script>
+        <script type="text/javascript" src="static/assets/js/custom.js"></script>
+
+
+    </body>
+
+
+<!-- Mirrored from ultiglobal.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 10 Jan 2022 01:35:18 GMT -->
+</html>
+{% endblock %} 
