--- a/src/pawel_pedryc_developer/templates/home_page_pawel_template/pawel_pedryc.html
+++ b/src/pawel_pedryc_developer/templates/home_page_pawel_template/pawel_pedryc.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h1>tu będzie moja stronka</h1>
-    <p>tu jej treść. yeah!!!!</p>
+    <p>tu jej treść. yeah!!!!666</p>
     
 </body>
 </html>
