--- a/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/pawel_pedryc.html
+++ b/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/pawel_pedryc.html
@@ -1,56 +1,48 @@
-
+{% extends 'pawel_pedryc_developer/base/base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My developer's profile </title>
+{% block title %}My developer's profile{% endblock %}
+
+{% block site_css %}
+<link rel="stylesheet" href="{% static 'pawel_pedryc/styles/all-meetups.css' %}">
+{% endblock %}
+
+{% block main_heading%}
+Tytuł strony o mnie
+{% endblock%}
+
+{% block header_content%}
+tu może dam jakiś cytat
+{% endblock%}
     
-    <!--load static file:-->
-    <!--font-awesome.min.css-->
-    <link rel="stylesheet" href="{% static 'pawel_pedryc/styles/base.css' %}">
-    <link rel="stylesheet" href="{% static 'pawel_pedryc/styles/all-meetups.css' %}">
-
-</head>
-<body>
-    <header id="main-header">
-        <nav><a href="/pawel_pedryc_developer" id="main-logo">My page: Paweł Pedryc</a></nav>
-        <h1>Tytuł strony o mnie</h1>
-        <p> tu może dam jakiś cytat</p>
-    </header>
-    <main>
-        <section>
-            <h2>Moje artykuły i eseje</h2> 
-            <ol>
-                {% if show_text_content %}
-                    {% for essay_item in text_content %}
-                    <li class="meetup-item">
-                        <article>
-                            <div class="meetup-summary">
-                                <div class="meetup-image">
-                                    <!-- <img class="meetup-image-size" src='C:/Users/b2b/Desktop/pikachu.png' alt=""> -->
+{% block body %}
+            <section>
+                <h2>Moje artykuły i eseje</h2> 
+                <ol>
+                    {% if show_text_content %}
+                        {% for essay_item in text_content %}
+                        <li class="meetup-item">
+                            <article>
+                                <div class="meetup-summary">
+                                    <div class="meetup-image">
+                                        <!-- <img class="meetup-image-size" src='C:/Users/b2b/Desktop/pikachu.png' alt=""> -->
+                                    </div>
+                                    <div class="meetup-details">
+                                        <h3>{{ essay_item.title}}</h3>
+                                        <p>{{ essay_item.description }}</p>
+                                    </div>
                                 </div>
-                                <div class="meetup-details">
-                                    <h3>{{ essay_item.title}}</h3>
-                                    <p>{{ essay_item.description }}</p>
+                                <div class="meetup-actions">
+                                    {% comment %} <a href="/pawel_pedryc_developer/{{ essay_item.slug }}" class="btn">More details</a> {% endcomment %}
+                                    <a href="{% url 'essay-path' essay_item.slug %}" class="btn">More details</a>
                                 </div>
-                            </div>
-                            <div class="meetup-actions">
-                                {% comment %} <a href="/pawel_pedryc_developer/{{ essay_item.slug }}" class="btn">More details</a> {% endcomment %}
-                                <a href="{% url 'essay-path' essay_item.slug %}" class="btn">More details</a>
-                            </div>
-                        </article>
-                    </li>
-                    {% endfor %}
-                {% else %}
-                    <h2>New content comming soon!</h2>
-                {% endif %}
-            </ol>
-
-        </section>
-    </main>
-</body>
-</html>
+                            </article>
+                        </li>
+                        {% endfor %}
+                    {% else %}
+                        <h2>New content comming soon!</h2>
+                    {% endif %}
+                </ol>
+            </section>
+{% endblock %}
+        
