--- a/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/pawel_pedryc.html
+++ b/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/pawel_pedryc.html
@@ -21,23 +21,9 @@ tu może dam jakiś cytat
                 <ol>
                     {% if show_text_content %}
                         {% for essay_item in text_content %}
-                        <li class="meetup-item">
-                            <article>
-                                <div class="meetup-summary">
-                                    <div class="meetup-image">
-                                        <!-- <img class="meetup-image-size" src='C:/Users/b2b/Desktop/pikachu.png' alt=""> -->
-                                    </div>
-                                    <div class="meetup-details">
-                                        <h3>{{ essay_item.title}}</h3>
-                                        <p>{{ essay_item.description }}</p>
-                                    </div>
-                                </div>
-                                <div class="meetup-actions">
-                                    {% comment %} <a href="/pawel_pedryc_developer/{{ essay_item.slug }}" class="btn">More details</a> {% endcomment %}
-                                    <a href="{% url 'essay-path' essay_item.slug %}" class="btn">More details</a>
-                                </div>
-                            </article>
-                        </li>
+
+                            {% include 'pawel_pedryc_developer/includes/essay-items.html' %}
+
                         {% endfor %}
                     {% else %}
                         <h2>New content comming soon!</h2>
