start of db build

--- a/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/includes/essay-items.html
+++ b/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/includes/essay-items.html
@@ -5,8 +5,8 @@
                 <!-- <img class="meetup-image-size" src='C:/Users/b2b/Desktop/pikachu.png' alt=""> -->
             </div>
             <div class="meetup-details">
-                <h3>{{ essay_item.title}}</h3>
-                <p>{{ essay_item.description }}</p>
+                <h3>{{ title}}</h3>
+                <p>{{ description }}</p>
             </div>
         </div>
         <div class="meetup-actions">
