querying data: base template; gitignore: /base

--- a/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/includes/essay-items.html
+++ b/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/includes/essay-items.html
@@ -11,7 +11,7 @@
         </div>
         <div class="meetup-actions">
             {% comment %} <a href="/pawel_pedryc_developer/{{ essay_item.slug }}" class="btn">More details</a> {% endcomment %}
-            <a href="{% url 'essay-path' essay_item.slug %}" class="btn">More details</a>
+            <a href="{% url 'essay-path' slug %}" class="btn">More details</a>
         </div>
     </article>
 </li>
