--- a/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/learning-programming-is-a-long-run-not-a-sprint.html
+++ b/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/learning-programming-is-a-long-run-not-a-sprint.html
@@ -13,6 +13,9 @@
 
 
 {% block body %}
+
+{% if essay_found %}
+
 <article>
     <img src="" alt="">
 
@@ -33,4 +36,9 @@
         FORM
     </section>
 </article>
+
+{% else %}
+<h2>No essay found for this slug, sorry! </h2>
+{% endif %}
+
 {% endblock%}
