--- a/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/includes/essay_items.html
+++ b/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/includes/essay_items.html
@@ -2,11 +2,12 @@
     <article>
         <div class="meetup-summary">
             <div class="meetup-image">
-                <!-- <img class="meetup-image-size" src='C:/Users/b2b/Desktop/pikachu.png' alt=""> -->
+                <img src="{{ image }}" alt="{{ title }}">
             </div>
             <div class="meetup-details">
                 <h3>{{ title}}</h3>
                 <p>{{ description }}</p>
+                <p>Programming language: {{ prog_language }}
             </div>
         </div>
         <div class="meetup-actions">
