db relations: one to many; many to many (dev page)

--- a/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/includes/essay_items.html
+++ b/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/includes/essay_items.html
@@ -7,7 +7,7 @@
             <div class="meetup-details">
                 <h3>{{ title}}</h3>
                 <p>{{ description }}</p>
-                <p>Programming language: {{ prog_language }}
+                <p>Knowledge set -> {{ language }}</p>
             </div>
         </div>
         <div class="meetup-actions">
