--- a/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/pawel_pedryc.html
+++ b/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/pawel_pedryc.html
@@ -33,7 +33,7 @@ tu może dam jakiś cytat
                             description=essay_item.description 
                             slug=essay_item.slug
                             image=essay_item.image.url
-                            essay_prog_language=essay_item.prog_language
+                            language=essay_item.language
                             %}
 
                         {% endfor %}
