--- a/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/learning-programming-is-a-long-run-not-a-sprint.html
+++ b/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/learning-programming-is-a-long-run-not-a-sprint.html
@@ -17,7 +17,7 @@
 {% if essay_found %}
 
 <article>
-    <img src="{{ essay_all.image.url }}" alt="{{ essay_all.title }}">
+    <img id="main-image" src="{{ essay_all.image.url }}" alt="{{ essay_all.title }}">
 
     <section id="location">
         <h2>Other infos</h2>
@@ -33,7 +33,15 @@
     </section>
     <section id="registration">
         <h2>Send me your request and job offers!</h2>
-        FORM
+        <form action="{% url 'essay-path' essay_all.slug %}" method="POST">
+            {% csrf_token %}
+            <ul>
+                {{ form.as_ul }}
+            </ul>
+            <div id="registration-actions">
+                <button>Join me</button>
+            </div>
+        </form>
     </section>
 </article>
 
