Polishing organizer email

--- a/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/learning-programming-is-a-long-run-not-a-sprint.html
+++ b/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/learning-programming-is-a-long-run-not-a-sprint.html
@@ -28,7 +28,7 @@
         <h2>What's this essay about?</h2>
         <p>{{ essay_all.description }}</p>
         <footer>
-            <p>Need more details? <a href="">Please contact me</a> (but don't spam ;))</p>
+            <p>Need more details? <a href="mailto:{{ essay_all.organizer_email }}">Please contact me</a> (but don't spam ;))</p>
         </footer>
     </section>
     <section id="registration">
