--- a/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/learning-programming-is-a-long-run-not-a-sprint.html
+++ b/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/learning-programming-is-a-long-run-not-a-sprint.html
@@ -26,7 +26,9 @@
 
     <section id="details">
         <h2>What's this essay about?</h2>
+        {% autoescape off %}
         <p>{{ essay_all.description }}</p>
+        {% endautoescape %}
         <footer>
             <p>Need more details? <a href="mailto:{{ essay_all.organizer_email }}">Please contact me</a> (but don't spam ;))</p>
         </footer>
