upd css padding, new object in EssayCls: `details`

--- a/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/includes/essay_items.html
+++ b/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/includes/essay_items.html
@@ -7,7 +7,9 @@
             <div class="meetup-details">
                 <h3>{{ title}}</h3>
                 <p>{{ description }}</p>
-                <p>Knowledge set -> {{ language }}</p>
+                <div class="meetup-small-box">
+                    <p><b>Knowledge set: </b>{{ language }}</p>
+                </div>
             </div>
         </div>
         <div class="meetup-actions">
