--- a/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/pawel_pedryc.html
+++ b/src/pawel_pedryc_developer/templates/pawel_pedryc_developer/pawel_pedryc.html
@@ -31,6 +31,7 @@ tu może dam jakiś cytat
                             with
                             title=essay_item.title
                             description=essay_item.description 
+                            details=essay_item.details
                             slug=essay_item.slug
                             image=essay_item.image.url
                             language=essay_item.language
